config/admission/approval_validating_policy_binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: approval-validate-policy
spec:
  policyName: approval-validate-policy
  validationActions:
  - Deny
